--- a/.github/workflows/Build_and_Release.yml
+++ b/.github/workflows/Build_and_Release.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           INPUT_GITHUB_USERNAME: "huntertoby"
           INPUT_GITHUB_TOKEN: ${{ secrets.ACTIONSECRET2024 }}
-          INPUT_TARGET_REPOS: '[huntertoby/activity-log]'
+          INPUT_TARGET_REPOS: '["huntertoby/activity-log"]'
           INPUT_OUTPUT_STYLE: MARKDOWN
           INPUT_IGNORE_EVENTS: '[]'
           INPUT_README_PATH: README.md
