--- a/.github/workflows/Build_and_Release.yml
+++ b/.github/workflows/Build_and_Release.yml
@@ -36,22 +36,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
-    defaults:
-      run:
-        shell: bash
     steps:
       - uses: actions/checkout@v4
-      - name: Test index.js
-        env:
-          INPUT_GITHUB_USERNAME: "huntertoby"
-          INPUT_GITHUB_TOKEN: ${{ secrets.ACTIONSECRET2024 }}
-          INPUT_TARGET_REPOS: '["huntertoby/activity-log"]'
-          INPUT_OUTPUT_STYLE: MARKDOWN
-          INPUT_IGNORE_EVENTS: '[]'
-          INPUT_README_PATH: README.md
-          INPUT_COMMIT_MESSAGE: Update README.md
-          INPUT_EVENT_LIMIT: '100'
-        run: node ./dist/index.js
+      - name: Test Action
+        uses: ./. # Uses the action in the root directory
+        with:
+          github_username: "huntertoby"
+          github_token: ${{ secrets.ACTIONSECRET2024 }}
+          target_repos: '["huntertoby/activity-log"]'
+          output_style: MARKDOWN
+          ignore_events: '[]'
+          readme_path: README.md
+          commit_message: Update README.md
+          event_limit: '100'
 
   release:
     runs-on: ubuntu-latest
